Refactor: http request에 일급 컬렉션 적용, header 파싱 메소드 수정
기존 1. 요청 객체에 hashMap으로 헤더와 request parameter, body 저장
기존 2. if문을 이용, 대소문자를 정확히 구분하여 원하는 요청 헤더 파싱
변경 1. FirstClassCollection 클래스를 이용하여 hashMap을 한번 더 wrapping
변경 2. 요청 헤더에 들어오는 키 값을 대소문자 구분 없이 비교하여 파싱