@@ -3,9 +3,13 @@ package webserver;
 import java.io.*;
 import java.net.Socket;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+import java.util.HashMap;
+import java.util.Map;
 
 import controller.Controller;
 import dto.request.HTTPRequestDto;
+import dto.request.HeaderEnum;
 import dto.response.HTTPResponseDto;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -34,14 +38,8 @@ public class RequestHandler implements Runnable {
             // HTTP Request 파싱
             httpRequestParsing(br);
 
-            if(httpRequestDto.getRequestTarget().contains("?")) {
-                // request param 맵에 저장
-                getRequestParams(httpRequestDto.getRequestTarget());
-                // 요청에서 쿼리 스트링 떼어내기
-                httpRequestDto.setRequestTarget(
-                        httpRequestDto.getRequestTarget().substring(0, httpRequestDto.getRequestTarget().indexOf("?"))
-                );
-            }
+            // query string 파싱
+            queryStringParsing(httpRequestDto.getRequestTarget());
 
             // 요청 처리
             HTTPResponseDto httpResponseDto = Controller.doRequest(httpRequestDto);
@@ -89,7 +87,7 @@ public class RequestHandler implements Runnable {
 
     // http request 파싱 2: header
     private void headerParsing(BufferedReader br) throws IOException {
-        String key, value;
+        Map<String, String> header = new HashMap<String, String>();
 
         while(true) {
             String line = br.readLine();
@@ -98,44 +96,18 @@ public class RequestHandler implements Runnable {
             // 개행문자만을 읽었다면 -> 헤더 끝
             if(line != null && line.isEmpty())
                 break;
-            if(line.contains("Host:")) {
-                // Host 추출
-                oneHeaderParsing("Host", line);
+            if(!line.contains(":"))
                 continue;
-            }
-            if(line.contains("Accept:")) {
-                // Accept 추출
-                oneHeaderParsing("Accept", line);
-                continue;
-            }
-            if(line.contains("Connection:")) {
-                // Connection 추출
-                oneHeaderParsing("Connection", line);
-                continue;
-            }
-            if(line.contains("Content-Length:")) {
-                // Content-Length 추출
-                oneHeaderParsing("Content-Length", line);
-                continue;
-            }
-            if(line.contains("Cookie:")) {
-                // Cookie 추출
-                oneHeaderParsing("Cookie", line);
-                continue;
-            }
+            String key = line.substring(0, line.indexOf(":")).strip();
+
+            // header enum을 순회하며 파싱의 대상일 경우 파싱 -> header 맵에 저장
+            HeaderEnum headerEnum = HeaderEnum.getHeaderKey(key);
+            header = headerEnum.doParsing(header, line);
         }
+        httpRequestDto.setHeader(header);
     }
 
-    // http request 파싱 3: header 하나
-    private void oneHeaderParsing(String key, String line) {
-        String value = line.substring((key + ": ").length());
-        if(value.contains(","))
-            value = value.substring(0, value.indexOf(","));
-        httpRequestDto.addHeader(key, value);
-        logger.debug(key + ": {}",  value);
-    }
-
-    // http request 파싱 4: body
+    // http request 파싱 3: body
     private void bodyParsing(BufferedReader br) throws IOException {
         Integer length;
         if( (length = httpRequestDto.getContentLength()) != null) {
@@ -143,25 +115,43 @@ public class RequestHandler implements Runnable {
             br.read(body);
 
             // 한글 파라미터 decoding 후 body 저장
-            httpRequestDto.setBody(URLDecoder.decode(new String(body), "UTF-8"));
+            Map<String, String> bodyMap = bodyParsing(URLDecoder.decode(new String(body), StandardCharsets.UTF_8));
+            httpRequestDto.setBody(bodyMap);
             logger.debug("Request Body: {}", httpRequestDto.getBody());
         }
     }
 
     // 쿼리 스트링 파싱
-    private void getRequestParams(String url) {
+    private void queryStringParsing(String url) {
         if (url == null)
             return;
         if (!url.contains("?"))
             return;
 
-        String[] tokens = url.split("\\?");
-        tokens = tokens[1].split("&");
-        for (int i = 0; i < tokens.length; i++) {
+        Map<String, String> requestParams = new HashMap<>();
+        String params = url.substring(url.indexOf("?")+1);
+        String[] param = params.split("&");
+        for (int i = 0; i < param.length; i++) {
+            String[] elements = param[i].split("=");
+            requestParams.put(elements[0], elements[1]);
+        }
+        httpRequestDto.setRequestParam(requestParams);
+        // 요청에서 쿼리 스트링 떼어내기
+        httpRequestDto.setRequestTarget(
+                httpRequestDto.getRequestTarget().substring(0, httpRequestDto.getRequestTarget().indexOf("?"))
+        );
+    }
+
+    // body 파싱
+    private HashMap<String, String> bodyParsing(String body) {
+        HashMap<String, String> bodyMap = new HashMap<>();
+        String[] tokens = body.split("&");
+        for(int i = 0; i < tokens.length; i++) {
             String key = tokens[i].substring(0, tokens[i].indexOf("="));
             String value = tokens[i].substring(tokens[i].indexOf("=") + 1);
-            httpRequestDto.addRequestParam(key, value);
+            bodyMap.put(key, value);
         }
+        return bodyMap;
     }
 
 }
